--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 .Rhistory
 .RData
 .Ruserdata
+.DS_Store
 .csv
 .xlsx
 .xls
-UMMAPMindsetRegistry_DATA_LABELS_2018-02-23_1042.csv
-UDS_Enrolled_Table_2018-02-26_10-16.csv
